# short-url-app

./: Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs  repository.rs  structs.rs  templates.rs  utils.rs
templates/: index.html
