[package]
name = "rust-short-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
axum = "0.6.20"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
mongodb = "2.1"
bson = { version = "2" }
async-trait = "0.1.73"
nanoid = "0.4.0"
askama_axum = "0.3.0"
url = "2.4.1"
